finished the player clas with getters and setter for the various properties of a player and added difficulty within here for simplicity's sake finished the Ship class to call from the shiptype enum populated shiptype with a "Gnat" ship created a difficulty enum with easy, normal, hard, impossible rerouted the floating button to the configure game screen

--- a/SpaceTraderAndroid/app/src/main/res/layout/activity_configure_game.xml
+++ b/SpaceTraderAndroid/app/src/main/res/layout/activity_configure_game.xml
@@ -130,7 +130,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="61dp"
-        android:text="Pilot Points"
+        android:text="Trade Points"
         android:textColor="@color/colorPrimary"
         app:layout_constraintStart_toEndOf="@+id/trade_points"
         app:layout_constraintTop_toBottomOf="@+id/engineer_point_header" />
