Edited ConfigureGameActivity and added setter for Difficulty in Player class

--- a/SpaceTraderAndroid/app/src/main/res/layout/activity_configure_game.xml
+++ b/SpaceTraderAndroid/app/src/main/res/layout/activity_configure_game.xml
@@ -151,12 +151,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="536dp"
+        android:layout_marginTop="528dp"
         android:layout_marginEnd="8dp"
         android:text="Difficulty"
         android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.601"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -169,6 +169,7 @@
         android:layout_marginEnd="8dp"
         android:dropDownWidth="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.587"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/difficulty_header" />
 
@@ -185,6 +186,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/difficulty_spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/difficulty_spinner"
+        app:layout_constraintVertical_bias="0.602" />
 
 </android.support.constraint.ConstraintLayout>
