--- a/SpaceTraderAndroid/app/src/main/res/layout/activity_configure_game.xml
+++ b/SpaceTraderAndroid/app/src/main/res/layout/activity_configure_game.xml
@@ -181,6 +181,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:onClick="onStartPressed"
         android:text="Save and Start"
         android:textColor="@color/design_default_color_primary_dark"
         app:layout_constraintBottom_toBottomOf="parent"
