--- a/SpaceTraderAndroid/app/src/main/res/layout/activity_configure_game.xml
+++ b/SpaceTraderAndroid/app/src/main/res/layout/activity_configure_game.xml
@@ -29,8 +29,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:hint="Name"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name_header" />
@@ -58,8 +59,8 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="40dp"
         android:ems="10"
+        android:hint="0"
         android:inputType="number"
-        android:text="0"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/difficulty_spinner" />
@@ -71,8 +72,8 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="40dp"
         android:ems="10"
+        android:hint="0"
         android:inputType="number"
-        android:text="0"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pilot_points" />
@@ -84,8 +85,8 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="40dp"
         android:ems="10"
+        android:hint="0"
         android:inputType="number"
-        android:text="0"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/engineer_points" />
@@ -97,8 +98,8 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="45dp"
         android:ems="10"
+        android:hint="0"
         android:inputType="number"
-        android:text="0"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trade_points" />
