--- a/SpaceTraderIOS/SpaceTraderIOS/Base.lproj/Main.storyboard
+++ b/SpaceTraderIOS/SpaceTraderIOS/Base.lproj/Main.storyboard
@@ -56,10 +56,28 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="t1d-Hv-0xq"/>
                     </view>
+                    <connections>
+                        <segue destination="oWd-XE-EJF" kind="show" identifier="PlanetToMarket" id="Qab-C9-6G6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0LD-bK-PM5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2005" y="132"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ICc-L4-uOk">
+            <objects>
+                <viewController id="oWd-XE-EJF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AlW-v9-qrh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="rOH-yd-aqh"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="umh-ee-ewK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2919" y="132"/>
         </scene>
     </scenes>
 </document>
