--- a/SpaceTraderAndroid/app/src/main/res/layout/activity_planet.xml
+++ b/SpaceTraderAndroid/app/src/main/res/layout/activity_planet.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="76dp"
+        android:onClick="onMarketPressed"
         android:text="Market"
         app:layout_constraintBottom_toTopOf="@+id/map_button"
         app:layout_constraintEnd_toEndOf="parent"
