--- a/SpaceTraderAndroid/app/src/main/res/layout/market_item.xml
+++ b/SpaceTraderAndroid/app/src/main/res/layout/market_item.xml
@@ -15,19 +15,14 @@
             android:id="@+id/text_good_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
             android:id="@+id/text_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="129dp"
-            android:layout_marginTop="24dp"
-            android:layout_toEndOf="@+id/text_quantity"
+            android:layout_marginStart="48dp"
+            android:layout_toEndOf="@+id/text_good_name"
             android:maxLines="1"
             android:paddingEnd="8dp" />
 
@@ -35,8 +30,8 @@
             android:id="@+id/text_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="221dp"
+            android:layout_marginStart="17dp"
+            android:layout_toEndOf="@+id/text_price"
             android:maxLines="1"
             android:paddingEnd="8dp" />
 
