--- a/SpaceTraderAndroid/app/src/main/res/layout/activity_market.xml
+++ b/SpaceTraderAndroid/app/src/main/res/layout/activity_market.xml
@@ -29,7 +29,8 @@
                 android:text="TextView"
                 android:textAlignment="viewStart"
                 android:textColor="@color/design_default_color_primary"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/wallet_textview"
@@ -51,7 +52,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/buy_market_list"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="280dp"
             tools:layout_editor_absoluteY="715dp"
             tools:listitem="@layout/market_buy_item">
 
@@ -63,15 +64,32 @@
             android:layout_height="5dp"
             android:background="?android:attr/listDivider" />
 
-        <TextView
-            android:id="@+id/sell_textview"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textAlignment="viewStart"
-            android:textColor="@color/design_default_color_primary"
-            android:textSize="24sp"
-            tools:layout_editor_absoluteY="715dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/sell_textview"
+                android:layout_width="215dp"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textAlignment="viewStart"
+                android:textColor="@color/design_default_color_primary"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteY="715dp" />
+
+            <TextView
+                android:id="@+id/capacity_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Text"
+                android:textAlignment="center"
+                android:textColor="@color/design_default_color_primary"
+                android:textSize="18sp" />
+        </LinearLayout>
 
         <View
             android:id="@+id/divider2"
@@ -82,7 +100,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/sell_market_list"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="280dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
