--- a/SpaceTraderAndroid/app/src/main/res/layout/activity_planet.xml
+++ b/SpaceTraderAndroid/app/src/main/res/layout/activity_planet.xml
@@ -26,6 +26,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="92dp"
+        android:onClick="onMapPressed"
         android:text="Map"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
