generate testing junit complete added coordinates to planet screen adjusted the market to work correctly - prices of player's goods now change depending planet they are on added java docs comments to a majority of the classes

--- a/SpaceTraderAndroid/app/src/main/res/layout/activity_planet.xml
+++ b/SpaceTraderAndroid/app/src/main/res/layout/activity_planet.xml
@@ -9,7 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <TextView
             android:id="@+id/planet_name_textView"
@@ -27,10 +29,12 @@
         <TextView
             android:id="@+id/planet_stats_textView"
             android:layout_width="match_parent"
-            android:layout_height="39dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="36dp"
             android:layout_marginEnd="8dp"
+            android:paddingTop="0dp"
+            android:paddingBottom="10dp"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.511"
